fix overflow control

--- a/meteor-angular/imports/ui/components/thingsList/thingsList.less
+++ b/meteor-angular/imports/ui/components/thingsList/thingsList.less
@@ -12,7 +12,7 @@ things-list {
 
             .action-header {
                 height: auto;
-                
+
                 div {
                     overflow: visible !important;
                 }
@@ -20,7 +20,7 @@ things-list {
         }
         div {
             width: 100%;
-            overflow: auto;
+            overflow-y: scroll;
 
             md-grid-list {
                 width: 100%;
